force-app/main/default/objects/Job_Alert_Subscription__c/Job_Alert_Subscription__c.object-meta.xml
<CustomObject>
    <label>Job Alert Subscription</label>
    <nameField>
        <displayFormat>JASN - {0000}</displayFormat>
        <label>Job Alert Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Alert Subscriptions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>