force-app/main/default/objects/Job_Alert_Subscription__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Subscriber email address.</description>
    <externalId>true</externalId>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>