force-app/main/default/objects/Job_Alert_Subscription__c/fields/Job_Results_JSON__c.field-meta.xml
<CustomField>
    <fullName>Job_Results_JSON__c</fullName>
    <description>Cached job results from API calls</description>
    <label>Job Results JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>