force-app/main/default/objects/Job_Alert_Subscription__c/fields/Last_Alert_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Alert_Sent__c</fullName>
    <description>Tracks last notification timestamp</description>
    <label>Last Alert Sent</label>
    <type>DateTime</type>
</CustomField>