force-app/main/default/objects/Job_Alert_Subscription__c/fields/Resume_File_ID__c.field-meta.xml
<CustomField>
    <fullName>Resume_File_ID__c</fullName>
    <description>ContentVersion record ID</description>
    <label>Resume File ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>