force-app/main/default/objects/Job_Alert_Subscription__c/fields/Skills_Extracted__c.field-meta.xml
<CustomField>
    <fullName>Skills_Extracted__c</fullName>
    <label>Skills Extracted</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>